2003-02-06  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* lisp/configure.in: Determining emacs version was broken for GNU Emacs.

2003-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c: Trap syntax error 
	* docs/gnuplot.doc Fix indentation, and add a section for `unset`.

2003-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* NEWS docs/gnuplot.doc src/datafile.c src/datafile.h src/save.c 
	src/set.c src/show.c src/unset.c: 
	Add new command `set datafile separator { whitespace | "<char>"}`.
	This allows plotting from tab- or comma- separated data files.

2003-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Revise handling of text color and point style to
 	match other terminal types. NB: Justification of rotated text is 
	still not correct.
	* term/pstricks.trm: Remove unused variable.

2003-02-03  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in: New option --with-gihdir to specify location of
	.gih file. This is passed on to docs and src Makefiles.

	* docs/Makefile.in, src/Makefile.am: Use new GIHDIR variable for
	.gih file location.

2003-01-31  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL: Updated file locations.

	* configure.in: Fix gih location report foobar.

	* term/x11.trm: Remove obsolete USE_X11_DRIVER code.

2003-01-30  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* Makefile.am, lisp/Makefile.am: Remove gnuplot.info and gnuplot.texi
	from gnuplot-mode build.

2003-01-28  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL: Updated.

	* Makefile.am: Tighter integration with gnuplot-mode.

	* configure.in: Restore --with-gif=png option. Use pdflib-config if
	available. Remove conditional building of lisp/ files. Move file copy
	operation out of tutorial Makefile. Cosmetics.

	* lisp/COPYING, lisp/INSTALL, lisp/Makefile.am: New files.

	* lisp/configure.in: Updated for better integration with gnuplot as
	well as comfortable building in standalone mode.

	* lisp/gnuplot.el, lisp/gpelcard.tex: Updated to 0.6.0.
